<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnEditTask"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:background="@drawable/edittask_top"
            android:fontFamily="@font/poppins"
            android:text="@string/EditTask"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnEditLabel"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:background="@drawable/edittask_middle"
            android:fontFamily="@font/poppins"
            android:text="@string/EditLabel"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnRemoveTask"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:background="@drawable/edittask_bottom"
            android:fontFamily="@font/poppins"
            android:text="@string/RemoveTask"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>