<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clProfileBadgeItem1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/profile_rv_middle">

    <TextView
        android:id="@+id/tvStatusDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/merriweather"
        android:text="@string/StatusDescription"
        android:textColor="#3b3b3b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatusTitle" />

    <TextView
        android:id="@+id/tvStatusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/merriweather"
        android:text="@string/StatusTitle"
        android:textColor="#3b3b3b"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStatusRequirements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/merriweather"
        android:text="@string/StatusRequirements"
        android:textColor="#3b3b3b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatusDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>