<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnWeekly"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#DBDAE1"
            android:fontFamily="@font/poppins"
            android:padding="9dp"
            android:text="@string/WEEKLY"
            android:textColor="#313037"
            android:textColorLink="#E6D9D9"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnMonthly"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#DBDAE1"
            android:fontFamily="@font/poppins"
            android:padding="9dp"
            android:text="@string/MONTHLY"
            android:textColor="#313037"
            android:textColorLink="#E6D9D9"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/btnOverall"
            app:layout_constraintStart_toEndOf="@id/btnWeekly"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnOverall"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#DBDAE1"
            android:fontFamily="@font/poppins"
            android:padding="9dp"
            android:text="@string/OVERALL"
            android:textColor="#313037"
            android:textColorLink="#E6D9D9"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBottomNav">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibtnHome1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/Home1"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/homeinactive"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/ibtnCalendar1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/Calendar1"
                android:scaleType="center"
                app:srcCompat="@drawable/calendaractive" />

            <View
                android:layout_width="91dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/ibtnAnalytics1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/Analytics1"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/analyticsinactive" />

            <ImageButton
                android:id="@+id/ibtnProfile1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/Profile1"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/profileinactive"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAnalysis"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="1.0">
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask2"
        android:layout_width="101dp"
        android:layout_height="101dp"
        android:clickable="true"
        android:contentDescription="@string/AddTask1"
        android:translationY="-20dp"
        app:backgroundTint="#313037"
        app:fabCustomSize="101dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:maxImageSize="40dp"
        app:shapeAppearance="@style/CircularShape"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>