<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/tvForgetPassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/ForgetPassword2"
        android:textColor="#000000"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResetInstruction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather"
        android:text="@string/ResetInstruction2"
        android:textColor="#3b3b3b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword1" />

    <EditText
        android:id="@+id/etEnterEmail1"
        android:layout_width="311dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/merriweather"
        android:hint="@string/EnterEmail2"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:textColor="#000000"
        android:textColorHint="#808080"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResetInstruction1" />

    <Button
        android:id="@+id/btnResetPassword1"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#313037"
        android:fontFamily="@font/poppins"
        android:padding="11dp"
        android:text="@string/ResetPassword2"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEnterEmail1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/tvForgetPassword1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/security_shield__crime_security_security_shield"
        tools:srcCompat="@drawable/security_shield__crime_security_security_shield" />

</androidx.constraintlayout.widget.ConstraintLayout>