<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    tools:context=".AnalyticsFragment">

    <!-- Buttons (Weekly, Monthly, Overall) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnWeekly"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#DBDAE1"
            android:fontFamily="@font/poppins"
            android:padding="9dp"
            android:text="@string/WEEKLY"
            android:textColor="#313037"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnMonthly"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#DBDAE1"
            android:fontFamily="@font/poppins"
            android:padding="9dp"
            android:text="@string/MONTHLY"
            android:textColor="#313037"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/btnWeekly"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnOverall" />

        <Button
            android:id="@+id/btnOverall"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#DBDAE1"
            android:fontFamily="@font/poppins"
            android:padding="9dp"
            android:text="@string/OVERALL"
            android:textColor="#313037"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Analysis child fragment loader -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAnalysis"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
